--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,117 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <filter>
+        <filter-name>FilterCoding</filter-name>
+        <filter-class>com.jkk.controller.FilterCoding</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterCoding</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>FilterLoginCheck</filter-name>
+        <filter-class>com.jkk.controller.FilterLoginCheck</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterLoginCheck</filter-name>
+        <url-pattern>/file/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>FilterLoginCheck</filter-name>
+        <url-pattern>/user/*</url-pattern>
+    </filter-mapping>
+
+
+    <servlet>
+        <servlet-name>ServletFileCommon</servlet-name>
+        <servlet-class>com.jkk.controller.Disk.ServletCommon</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletFileCommon</servlet-name>
+        <url-pattern>/file/c</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletDownload</servlet-name>
+        <servlet-class>com.jkk.controller.Disk.ServletDownload</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletDownload</servlet-name>
+        <url-pattern>/file/down</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletFileSearch</servlet-name>
+        <servlet-class>com.jkk.controller.Disk.ServletFileSearch</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletFileSearch</servlet-name>
+        <url-pattern>/file/search</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletGetFile</servlet-name>
+        <servlet-class>com.jkk.controller.Disk.ServletGetFile</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletGetFile</servlet-name>
+        <url-pattern>/file/getfile</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletUpload</servlet-name>
+        <servlet-class>com.jkk.controller.Disk.ServletUpload</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletUpload</servlet-name>
+        <url-pattern>/file/up</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletGetUserInfo</servlet-name>
+        <servlet-class>com.jkk.controller.User.ServletGetUserInfo</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletGetUserInfo</servlet-name>
+        <url-pattern>/user/get</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletLogin</servlet-name>
+        <servlet-class>com.jkk.controller.User.ServletLogin</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletLogin</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletRegedit</servlet-name>
+        <servlet-class>com.jkk.controller.User.ServletRegedit</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletRegedit</servlet-name>
+        <url-pattern>/regedit</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletUserCommon</servlet-name>
+        <servlet-class>com.jkk.controller.User.ServletUserCommon</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletUserCommon</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletGetValcode</servlet-name>
+        <servlet-class>com.jkk.controller.ServletGetValcode</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletGetValcode</servlet-name>
+        <url-pattern>/getcode</url-pattern>
+    </servlet-mapping>
 </web-app>
