完成V1版本 1.下载上传功能 2.用户信息修改功能 3.文件分享功能

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -174,4 +174,13 @@
         <servlet-name>ServletShareDel</servlet-name>
         <url-pattern>/share/del</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ServletShareDown</servlet-name>
+        <servlet-class>com.jkk.controller.Share.ServletShareDown</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletShareDown</servlet-name>
+        <url-pattern>/share/down</url-pattern>
+    </servlet-mapping>
 </web-app>
